// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItwHighlightBanner should match the snapshot for large variant 1`] = `
<View
  accessible={false}
  style={
    {
      "borderRadius": 16,
      "display": "flex",
      "elevation": 5,
      "overflow": "visible",
      "padding": 16,
      "shadowColor": "#0E0F13",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 10,
    }
  }
>
  <View
    accessibilityLabel="title description action"
    accessible={true}
    style={
      {
        "gap": 16,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "gap": 32,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "gap": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignSelf": "center",
              }
            }
          >
            <View
              accessible={true}
              style={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "borderRadius": 36,
                    "paddingHorizontal": 12,
                    "paddingVertical": 6,
                  },
                  {
                    "backgroundColor": "#DBF9FA",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={true}
                ellipsizeMode="tail"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#003B3D",
                      "fontFamily": "Titillio",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 16,
                    },
                    {
                      "alignSelf": "center",
                      "flexShrink": 1,
                      "letterSpacing": 0.5,
                      "textTransform": "uppercase",
                    },
                  ]
                }
              >
                Novità
              </Text>
            </View>
          </View>
        </View>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="title3"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#FFFFFF",
                "fontFamily": "Titillio",
                "fontSize": 20,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          title
        </Text>
      </View>
      <SvgMock
        height={100}
        style={
          {
            "marginRight": -16,
          }
        }
        width={100}
      />
    </View>
    <View>
      <Text
        allowFontScaling={true}
        dynamicTypeRamp="body"
        maxFontSizeMultiplier={1.5}
        style={
          [
            {},
            {
              "color": "#555C70",
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 24,
            },
          ]
        }
      >
        Message can't be decoded
      </Text>
    </View>
    <View
      accessibilityLabel="action"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignSelf": "stretch",
          "flexShrink": 0,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderCurve": "continuous",
              "borderRadius": 8,
              "elevation": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 24,
              "textAlignVertical": "center",
            },
            {
              "height": 48,
            },
            {
              "backgroundColor": "#FFFFFF",
              "overflow": "hidden",
            },
            {
              "paddingHorizontal": 16,
            },
            {},
            false,
            {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              {
                "columnGap": 8,
              },
              false,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            accessible={false}
            allowFontScaling={true}
            ellipsizeMode="tail"
            importantForAccessibility="no-hide-descendants"
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            style={
              [
                {},
                {
                  "color": "#0B3EE3",
                  "fontFamily": "Titillio",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 20,
                },
                {
                  "alignSelf": "center",
                },
              ]
            }
          >
            action
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ItwHighlightBanner should match the snapshot for small variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={false}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "display": "flex",
          "elevation": 5,
          "overflow": "visible",
          "padding": 16,
          "shadowColor": "#0E0F13",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 10,
        },
        {
          "transform": [
            {
              "scale": undefined,
            },
          ],
        },
        {
          "elevation": NaN,
          "shadowRadius": NaN,
        },
      ]
    }
  >
    <View
      accessibilityLabel="title description action"
      accessible={true}
      style={
        {
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "gap": 32,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "gap": 8,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignSelf": "center",
                }
              }
            >
              <View
                accessible={true}
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderCurve": "continuous",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "borderRadius": 36,
                      "paddingHorizontal": 12,
                      "paddingVertical": 6,
                    },
                    {
                      "backgroundColor": "#DBF9FA",
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  maxFontSizeMultiplier={1.5}
                  numberOfLines={1}
                  style={
                    [
                      {},
                      {
                        "color": "#003B3D",
                        "fontFamily": "Titillio",
                        "fontSize": 12,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 16,
                      },
                      {
                        "alignSelf": "center",
                        "flexShrink": 1,
                        "letterSpacing": 0.5,
                        "textTransform": "uppercase",
                      },
                    ]
                  }
                >
                  Novità
                </Text>
              </View>
            </View>
          </View>
          <Text
            allowFontScaling={true}
            dynamicTypeRamp="title3"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Titillio",
                  "fontSize": 20,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Message can't be decoded
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        accessibilityLabel="action"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        importantForAccessibility="no-hide-descendants"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="none"
      >
        <View
          accessibilityLabel="action"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTouchEnd={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "textAlignVertical": "center",
                },
                false,
                {
                  "columnGap": 8,
                },
                {},
                {
                  "columnGap": 8,
                },
                false,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              accessible={false}
              allowFontScaling={true}
              ellipsizeMode="tail"
              importantForAccessibility="no-hide-descendants"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  [
                    {
                      "color": undefined,
                    },
                    {
                      "textAlign": "auto",
                    },
                  ],
                ]
              }
            >
              action
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
